force-app/main/default/objects/redwing__Prerequisite__c/redwing__Prerequisite__c.object-meta.xml
<CustomObject>
    <label>Prerequisite</label>
    <nameField>
        <label>Prerequisite Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prerequisites</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>