force-app/main/default/objects/redwing__Prerequisite__c/fields/redwing__Conditions__c.field-meta.xml
<CustomField>
    <fullName>redwing__Conditions__c</fullName>
    <label>Conditions</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>