force-app/main/default/objects/redwing__Prerequisite__c/fields/redwing__Type__c.field-meta.xml
<CustomField>
    <fullName>redwing__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Instructor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>